# xppl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: xppl.h  xppl_alloc.h  xppl_config.h  xppl_endianess.h  xppl_float.h  xppl_hash.h  xppl_int.h  xppl_log.h  xppl_map.h  xppl_path.h  xppl_socket.h  xppl_test.h
test/: _test_xppl_common.c  _test_xppl_common.h  _test_xppl_config.c  _test_xppl_config.h  _test_xppl_endianess.c  _test_xppl_endianess.h  _test_xppl_float.c  _test_xppl_float.h  _test_xppl_hash.c  _test_xppl_hash.h  _test_xppl_map.c  _test_xppl_map.h  _test_xppl_path.c  _test_xppl_path.h  test.c
xppl_common/: _log.c  _log.h  _path.c  _path.h  xppl_common.c  xppl_endianess.c  xppl_float.c  xppl_hash.c  xppl_log.c  xppl_path.c
xppl_config/: _cast.c  _cast.h  _cfg.c  _cfg.h  xppl_config.c
xppl_map/: _entry.c  _entry.h  _io.c  _io.h  _page.c  _page.h  xppl_map.c
xppl_socket/: xppl_socket.c
xppl_test/: _test.c  _test.h  xppl_test.c
